--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <li>Newslettery</li>
         <li>Wyszukiwarki (wewnętrzna i parafii)</li>
         <li>Streaming</li>
-        <li><a href="https://vamos202.github.io/sub_proposal/" target="_blank">System subskrypcji i płatności</li>
+        <li><a href="https://vamos202.github.io/sub_proposal/target="_blank">System subskrypcji i płatności</li>
         <li>Fotobaza</li>
         <li>Serwisy społecznościowe</li>
     </ul>
